# termiaxial

./: .commitlintrc.js  .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH_READY.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  lint.yml  pr-check.yml  release.yml  security.yml  stale.yml
campaign/: EKSEKUSI.md  README.md
campaign/assets/: CAPTURE_GUIDE.md  QUICK_START.md  README.md  UI_PREVIEW.html
campaign/scripts/: capture_assets.sh  post_reddit.sh  (+1 more)
docs/: BRANCHING.md  CAMPAIGN_STRATEGY.md  CLOUD_SYNC_TECH_SPEC.md  FRD.md  FRD_COMMAND_HISTORY_ENHANCEMENT.md  IMPLEMENTATION_PLAN.md  LAUNCH_GUIDE.md  MVP2_FEATURE_PROPOSAL.md  MVP2_FUNCTIONAL_REQUIREMENTS.md  MVP2_ROADMAP.md  OPENSOURCE_CHECKLIST.md  PRD.md  README.md
scripts/: fix-push.sh  release.sh  setup-workflows.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai.rs  fuzzy.rs  history.rs  import.rs  mod.rs  recording.rs  sftp.rs  snippet.rs  ssh.rs  ssh_config.rs  tunnel.rs  vault.rs
src-tauri/src/domain/: error.rs  events.rs  mod.rs  models.rs
src-tauri/src/infrastructure/: logging.rs
src-tauri/src/ssh/: client.rs  mod.rs  session.rs  sftp_channel.rs
src-tauri/src/vault/: crypto.rs  db.rs  mod.rs
(+39 files in other folders)
