[package]
name = "termiaxial"
version = "1.2.1"
description = "Termiaxial (Tmax) - Ultra-lightweight SSH/SFTP client"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "termiaxial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
ring = "0.17"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
anyhow = "1.0"
russh = "0.45"
russh-keys = "0.45"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
dashmap = "6.0"
uuid = { version = "1", features = ["v4"] }
russh-sftp = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_with = "3.0"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
